--- a/app/src/main/res/layout/fragment_new_group.xml
+++ b/app/src/main/res/layout/fragment_new_group.xml
@@ -223,7 +223,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/button_base"
+                android:elevation="4dp"
+                android:backgroundTint="@color/Morado"
                 android:text="Guardar"
                 android:textAllCaps="false"
                 android:textSize="16sp"
