--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -272,11 +272,12 @@
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
-               android:background="@drawable/button_base"
+               android:elevation="4dp"
+               android:backgroundTint="@color/Morado"
+               android:fontFamily="@font/source_sans_pro_semibold"
                android:text="Guardar"
                android:textAllCaps="false"
-               android:textSize="16sp"
-               android:textStyle="bold" />
+               android:textSize="16sp" />
 
        </LinearLayout>
        </LinearLayout>
