--- a/app/src/main/res/layout/fragment_new_item.xml
+++ b/app/src/main/res/layout/fragment_new_item.xml
@@ -35,6 +35,9 @@
         android:id="@+id/SaveItemBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="4dp"
+        android:backgroundTint="@color/Morado"
+        android:layout_marginEnd="10dp"
         android:text="Guardar"/>
 
 </LinearLayout>
