--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -282,6 +282,8 @@
                 android:layout_marginStart="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:elevation="4dp"
+                android:backgroundTint="@color/Morado"
                 android:text="Guardar" />
         </LinearLayout>
     </LinearLayout>
