Update colors main ui

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -208,8 +208,9 @@
                         android:id="@+id/eventsNumberTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/source_sans_pro_semibold"
                         android:padding="10dp"
-                        android:textColor="@color/btn_Azul"
+                        android:textColor="@color/TextUIPrincipal"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/fontTextView"
                         app:layout_constraintTop_toTopOf="parent"
@@ -255,8 +256,9 @@
                         android:id="@+id/NotesNumberTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/source_sans_pro_semibold"
                         android:padding="10dp"
-                        android:textColor="@color/btn_Azul"
+                        android:textColor="@color/TextUIPrincipal"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/fontTextView2"
                         app:layout_constraintTop_toTopOf="parent"
@@ -303,8 +305,9 @@
                         android:id="@+id/TodoNumberTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/source_sans_pro_semibold"
                         android:padding="10dp"
-                        android:textColor="@color/btn_Azul"
+                        android:textColor="@color/TextUIPrincipal"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/fontTextView3"
                         app:layout_constraintTop_toTopOf="parent"
