--- a/app/src/main/res/layout/fragment_new_item.xml
+++ b/app/src/main/res/layout/fragment_new_item.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:elevation="4dp"
         android:backgroundTint="@color/Morado"
+        android:textColor="@color/white"
         android:layout_marginEnd="10dp"
         android:text="Guardar"/>
 
